--- a/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
+++ b/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
@@ -61,7 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComparersTests\EmployeeComparerUnitTests.cs" />
-    <Compile Include="ConverterTests\ImportModelConverterUnitTests.cs" />
+    <Compile Include="ConverterTests\UnitTests\ImportModelConverterUnitTests.cs" />
     <Compile Include="ConverterTests\IntegrationalTests\ImportModelConverterIntegrationalTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WarehouseTests\IntegrationalTests\WarehouseIntegrationalTests.cs" />
