-add StageDataTemplateSelector, EmployeeCheckDesign

--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -60,6 +60,7 @@
     </ApplicationDefinition>
     <Compile Include="Attributes\DistanceAttribute.cs" />
     <Compile Include="Attributes\SegmentAttribute.cs" />
+    <Compile Include="TemplateSelectors\StageDataTemplateSelector.cs" />
     <Compile Include="ViewModels\CheckEmployeesStageViewModel.cs" />
     <Compile Include="ViewModels\EmployeeImportStageViewModel.cs" />
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
@@ -69,6 +70,9 @@
     <Compile Include="ViewModels\ProductImportStageViewModel.cs" />
     <Compile Include="ViewModels\ProductivityStageViewModel.cs" />
     <Compile Include="ViewModels\StageViewModel.cs" />
+    <Compile Include="Views\Design\EmployeeCheckDesign.xaml.cs">
+      <DependentUpon>EmployeeCheckDesign.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\FileImportUserControl.xaml.cs">
       <DependentUpon>FileImportUserControl.xaml</DependentUpon>
     </Compile>
@@ -93,6 +97,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Resources\Images.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Design\EmployeeCheckDesign.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
