--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Views\Design\EmployeeCheckDesign.xaml.cs">
       <DependentUpon>EmployeeCheckDesign.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Design\EmployeeViewModelCollection.cs" />
     <Compile Include="Views\FileImportUserControl.xaml.cs">
       <DependentUpon>FileImportUserControl.xaml</DependentUpon>
     </Compile>
