--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -98,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Resources\DataGridStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\DataTemplates.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
