--- a/Code/Helpers/Helpers.csproj
+++ b/Code/Helpers/Helpers.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="EasyTypeBuilder.cs" />
+    <Compile Include="TwoDirectionQueue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
