--- a/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
+++ b/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="ComparersTests\EmployeeComparerUnitTests.cs" />
     <Compile Include="ConverterTests\UnitTests\ImportModelConverterUnitTests.cs" />
     <Compile Include="ConverterTests\IntegrationalTests\ImportModelConverterIntegrationalTests.cs" />
+    <Compile Include="ProductivityTests\ProductivityUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WarehouseTests\IntegrationalTests\WarehouseIntegrationalTests.cs" />
   </ItemGroup>
