-add fonts, shift settings design

--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -109,6 +109,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resources\Fonts.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\Glyphs.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -175,6 +179,11 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Resource Include="Resources\Fonts\SuiGenerisRg.ttf" />
+    <Resource Include="Resources\Fonts\Noto_Serif\NotoSerif-Bold.ttf" />
+    <Resource Include="Resources\Fonts\Noto_Serif\NotoSerif-BoldItalic.ttf" />
+    <Resource Include="Resources\Fonts\Noto_Serif\NotoSerif-Italic.ttf" />
+    <Resource Include="Resources\Fonts\Noto_Serif\NotoSerif-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -206,6 +215,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\DialogViewModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Fonts\Noto_Serif\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
