--- a/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
+++ b/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
@@ -44,12 +44,12 @@
     <Compile Include="ActionDetails\ShipmentActionDetails.cs" />
     <Compile Include="ActionDetails\TimeActionDetails.cs" />
     <Compile Include="ActionDetails\WithProductActionDtails.cs" />
-    <Compile Include="EmployeeActionRepository.cs" />
-    <Compile Include="EmployeeActionFactory.cs" />
+    <Compile Include="RepositoryEmployeeAction.cs" />
+    <Compile Include="FactoryEmployeeAction.cs" />
     <Compile Include="IPauseBetweenActions.cs" />
     <Compile Include="PauseBetweenActions.cs" />
     <Compile Include="Period.cs" />
-    <Compile Include="EmployeeProductivity.cs" />
+    <Compile Include="ProductivityEmployee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ActionDetails\WithScansActionDetails.cs" />
   </ItemGroup>
