--- a/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
+++ b/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="ActionDetails\ShipmentActionDetails.cs" />
     <Compile Include="ActionDetails\TimeActionDetails.cs" />
-    <Compile Include="ActionDetails\WithProductActionDtails.cs" />
+    <Compile Include="ActionDetails\WithProductActionDetails.cs" />
     <Compile Include="RepositoryEmployeeAction.cs" />
     <Compile Include="FactoryEmployeeAction.cs" />
     <Compile Include="IPauseBetweenActions.cs" />
