-add Period equals operators; -add IBreakRepository; -ref PauseBetweeActions; -add ModelExtansion::End

--- a/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
+++ b/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ActionDetails\ShipmentActionDetails.cs" />
     <Compile Include="ActionDetails\TimeActionDetails.cs" />
     <Compile Include="ActionDetails\WithProductActionDetails.cs" />
+    <Compile Include="IBreakRepository.cs" />
     <Compile Include="RepositoryEmployeeAction.cs" />
     <Compile Include="FactoryEmployeeAction.cs" />
     <Compile Include="IPauseBetweenActions.cs" />
