--- a/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
+++ b/Code/WorkSpeed.Productivity/WorkSpeed.Productivity.csproj
@@ -45,7 +45,9 @@
     <Compile Include="ActionDetails\TimeActionDetails.cs" />
     <Compile Include="ActionDetails\WithProductActionDetails.cs" />
     <Compile Include="BreakRepository.cs" />
+    <Compile Include="DayPeriod.cs" />
     <Compile Include="IBreakRepository.cs" />
+    <Compile Include="ICategoryFilter.cs" />
     <Compile Include="RepositoryEmployeeAction.cs" />
     <Compile Include="FactoryEmployeeAction.cs" />
     <Compile Include="IPauseBetweenActions.cs" />
