--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -80,17 +80,29 @@
     <Compile Include="Views\Design\DesignWindow.xaml.cs">
       <DependentUpon>DesignWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\FileImportUserControl.xaml.cs">
-      <DependentUpon>FileImportUserControl.xaml</DependentUpon>
+    <Compile Include="Views\UserControls\EmployeeTable.xaml.cs">
+      <DependentUpon>EmployeeTable.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\FileImport.xaml.cs">
+      <DependentUpon>FileImport.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\FastProductivityMainWindow.xaml.cs">
       <DependentUpon>FastProductivityMainWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\BreakSetup.xaml.cs">
+      <DependentUpon>BreakSetup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\CategoriesSetup.xaml.cs">
+      <DependentUpon>CategoriesSetup.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserControls\DayShift.xaml.cs">
       <DependentUpon>DayShift.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserControls\NightShift.xaml.cs">
       <DependentUpon>NightShift.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\ShiftSetup.xaml.cs">
+      <DependentUpon>ShiftSetup.xaml</DependentUpon>
     </Compile>
     <Page Include="Resources\ButtonStyles.xaml">
       <SubType>Designer</SubType>
@@ -136,11 +148,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\FileImportUserControl.xaml">
+    <Page Include="Views\UserControls\EmployeeTable.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ImportDataUserControl.xaml">
+    <Page Include="Views\UserControls\FileImport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -155,9 +167,6 @@
     <Compile Include="ViewModels\ImportViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\FastProductivityViewModel.cs" />
-    <Compile Include="Views\ImportDataUserControl.xaml.cs">
-      <DependentUpon>ImportDataUserControl.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -166,11 +175,23 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\UserControls\BreakSetup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\CategoriesSetup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\UserControls\DayShift.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UserControls\NightShift.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\ShiftSetup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
