-add Shift setup stage

--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Models\ReceptionAction.cs" />
     <Compile Include="Models\Salary.cs" />
     <Compile Include="Models\ScanningAction.cs" />
+    <Compile Include="Models\Shift.cs" />
     <Compile Include="Models\ShipmentAction.cs" />
     <Compile Include="Models\ShipmentComplexity.cs" />
     <Compile Include="Models\WithProductAction.cs" />
