--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Models\Shift.cs" />
     <Compile Include="Models\ShipmentAction.cs" />
     <Compile Include="Models\ShipmentComplexity.cs" />
+    <Compile Include="Models\ShortBreak.cs" />
     <Compile Include="Models\WithProductAction.cs" />
     <Compile Include="Models\WorkDay.cs" />
     <Compile Include="Models\WorkDayStates.cs" />
