--- a/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
+++ b/Code/WorkSpeed.DesktopClient/WorkSpeed.DesktopClient.csproj
@@ -94,8 +94,8 @@
     <Compile Include="Views\UserControls\BreakSetup.xaml.cs">
       <DependentUpon>BreakSetup.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\UserControls\CategoriesSetup.xaml.cs">
-      <DependentUpon>CategoriesSetup.xaml</DependentUpon>
+    <Compile Include="Views\UserControls\CategoriesThreshold.xaml.cs">
+      <DependentUpon>CategoriesThreshold.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserControls\ShiftView.xaml.cs">
       <DependentUpon>ShiftView.xaml</DependentUpon>
@@ -181,7 +181,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\UserControls\CategoriesSetup.xaml">
+    <Page Include="Views\UserControls\CategoriesThreshold.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
