-ref tests, data template fot categories

--- a/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
+++ b/Tests/WorkSpeed.Tests/WorkSpeed.Tests.csproj
@@ -93,6 +93,10 @@
       <Project>{72e065c5-8769-4008-9529-11194be488e0}</Project>
       <Name>WorkSpeed.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Code\WorkSpeed.Productivity\WorkSpeed.Productivity.csproj">
+      <Project>{61c2a155-2641-4617-826e-82911531837a}</Project>
+      <Name>WorkSpeed.Productivity</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Code\WorkSpeed\WorkSpeed.csproj">
       <Project>{035d995a-6f8a-47c1-aebd-41b2cc5d6d7d}</Project>
       <Name>WorkSpeed</Name>
