--- a/Tests/WorkSpeed.Productivity.Tests/WorkSpeed.Productivity.Tests.csproj
+++ b/Tests/WorkSpeed.Productivity.Tests/WorkSpeed.Productivity.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BreakRepositoryUnitTests.cs" />
     <Compile Include="CategoryFilterUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
