--- a/Tests/WorkSpeed.Productivity.Tests/WorkSpeed.Productivity.Tests.csproj
+++ b/Tests/WorkSpeed.Productivity.Tests/WorkSpeed.Productivity.Tests.csproj
@@ -49,7 +49,10 @@
   <ItemGroup>
     <Compile Include="BreakRepositoryUnitTests.cs" />
     <Compile Include="CategoryFilterUnitTests.cs" />
+    <Compile Include="PauseBetweenActionsIntegrationTests.cs" />
+    <Compile Include="PauseBetweenActionsUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryEmployeeActionsUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
