--restruct models, ren p Document to Document1C

--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -134,7 +134,7 @@
     <Compile Include="DataContexts\WorkSpeedDataContext.cs" />
     <Compile Include="ModelExtansions.cs" />
     <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\EmployeeAction.cs" />
+    <Compile Include="Models\Actions\EmployeeAction.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\BonusesAndPenaltiesKinds.cs" />
@@ -143,8 +143,8 @@
     <Compile Include="Models\Complexity.cs" />
     <Compile Include="Models\Document1C.cs" />
     <Compile Include="Models\Employee.cs" />
-    <Compile Include="Models\GatheringAction.cs" />
-    <Compile Include="Models\InventoryAction.cs" />
+    <Compile Include="Models\Actions\GatheringAction.cs" />
+    <Compile Include="Models\Actions\InventoryAction.cs" />
     <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\OperationGroup.cs" />
     <Compile Include="Models\OperationGroups.cs" />
@@ -153,14 +153,14 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductDims.cs" />
     <Compile Include="Models\Rank.cs" />
-    <Compile Include="Models\ReceptionAction.cs" />
+    <Compile Include="Models\Actions\ReceptionAction.cs" />
     <Compile Include="Models\Salary.cs" />
-    <Compile Include="Models\ScanningAction.cs" />
+    <Compile Include="Models\Actions\ScanningAction.cs" />
     <Compile Include="Models\Shift.cs" />
-    <Compile Include="Models\ShipmentAction.cs" />
+    <Compile Include="Models\Actions\ShipmentAction.cs" />
     <Compile Include="Models\ShipmentComplexity.cs" />
     <Compile Include="Models\ShortBreak.cs" />
-    <Compile Include="Models\WithProductAction.cs" />
+    <Compile Include="Models\Actions\WithProductAction.cs" />
     <Compile Include="Models\WorkDay.cs" />
     <Compile Include="Models\WorkDayStates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
